@@ -10,3 +10,6 @@ oprofile was written by John Levon <moz@compsoc.man.ac.uk>.
 Philippe Elie <ph_e@club-internet.fr> contributed many bug fixes,
 wrote the tcl/tk oprofile interface and the source annotation facility,
 and more.
+
+Dave Jones <davej@suse.de> and Bob Montgomery <bobm@fc.hp.com> provided 
+bug fixes and useful testing.
