@@ -19,7 +19,7 @@
 #include <linux/kernel.h>
 #include <linux/module.h>
 #include <linux/init.h>
-#include <linux/malloc.h>
+#include <linux/slab.h>
 #include <linux/delay.h>
 #include <linux/vmalloc.h>
 #include <linux/sched.h>
@@ -171,6 +171,14 @@ struct _idt_descr { u32 a; u32 b; } __attribute__((__packed__));
 #else
 #define take_mmap_sem(mm) down_read(&mm->mmap_sem)
 #define release_mmap_sem(mm) up_read(&mm->mmap_sem)
+#endif
+
+// 2.4.7 introduced completions.
+#if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,7)
+#define DECLARE_COMPLETION(x)	DECLARE_MUTEX_LOCKED(x)
+#define init_completion(x)
+#define complete_and_exit(x, y) up_and_exit((x), (y))
+#define wait_for_completion(x) down(x)
 #endif
 
 int oprof_init(void);
